@@ -1,12 +1,18 @@
 package main;
 
+import algorithm.BinarySearch;
+import algorithm.SelectionSort;
 import entity.Bus;
 import entity.Student;
 import entity.User;
+import input.InputFromFile;
+import input.ManualInput;
+import input.RandomInput;
 
+import java.io.FileInputStream;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Scanner;
 
 public class Main {
@@ -34,6 +40,7 @@ public class Main {
     }
     static void workWithObject(String className) throws Exception {
         while (true){
+            ArrayList<Comparable> objects = new ArrayList<>();
             Scanner scanner = new Scanner(System.in);
             System.out.println("Работа с классом: " + className);
             System.out.println("Выберите способ заполнения списка объектов:\n" +
@@ -42,31 +49,37 @@ public class Main {
                     "2) Вручную\n" +
                     "3) Заполнить случайными значениями");
             String answer = scanner.nextLine();
-            ArrayList<Object> objects = new ArrayList<>();
             switch (answer){
                 case "0": return;
                 case "1":
-                    System.out.println("Заполнение из файла:");
+                    System.out.println("Заполнение из файла:\n" +
+                            "Введите путь к файлу: ");
+                    String fileName = scanner.nextLine();
+                    FileInputStream fis = new FileInputStream(fileName);
                     switch (className){
-                        case "Bus": /*Затычка для метода ввода из файла*/ break;
-                        case "Student": /*Затычка для метода ввода из файла*/ break;
-                        case "User": /*Затычка для метода ввода из файла*/ break;
+                        case "Bus": objects = InputFromFile.readBusesFromInputStream(fis); break;
+                        case "Student": objects = InputFromFile.readStudentsFromInputStream(fis); break;
+                        case "User": objects = InputFromFile.readUsersFromInputStream(fis); break;
                     }
                     break;
                 case "2":
-                    System.out.println("Заполнение вручную:");
+                    System.out.println("Заполнение вручную:\n" +
+                            "Введите количество объектов: ");
+                    int countManualObjects = Integer.parseInt(scanner.nextLine());
                     switch (className){
-                        case "Bus": /*Затычка для метода ввода вручную*/ break;
-                        case "Student": /*Затычка для метода ввода вручную*/ break;
-                        case "User": /*Затычка для метода ввода вручную*/ break;
+                        case "Bus": objects = ManualInput.inputBuses(countManualObjects, scanner); break;
+                        case "Student": objects = ManualInput.inputStudents(countManualObjects, scanner); break;
+                        case "User": objects = ManualInput.inputUsers(countManualObjects, scanner); break;
                     }
                     break;
                 case "3":
-                    System.out.println("Заполнение случайными значениями:");
+                    System.out.println("Заполнение случайными значениями:\n" +
+                            "Введите количество объектов: ");
+                    int countRandObjects = Integer.parseInt(scanner.nextLine());
                     switch (className){
-                        case "Bus": /*Затычка для метода рандомного ввода*/ break;
-                        case "Student": /*Затычка для метода рандомного ввода*/ break;
-                        case "User": /*Затычка для метода рандомного ввода*/ break;
+                        case "Bus": objects = RandomInput.generateBuses(countRandObjects); break;
+                        case "Student": objects = RandomInput.generateStudents(countRandObjects); break;
+                        case "User": objects = RandomInput.generateUsers(countRandObjects); break;
                     }
                     break;
                 default:
@@ -79,30 +92,80 @@ public class Main {
             }
             System.out.println();
             viewArrayObject(objects);
-            viewBinarySearch(objects);
+            ArrayList<Comparable> sortedObjects = null;
+            switch (objects.getFirst().getClass().getSimpleName()){
+                case "Bus":
+                    SelectionSort<Bus> busSort = new SelectionSort<>();
+                    @SuppressWarnings("unchecked")
+                    ArrayList<Bus> buses = (ArrayList<Bus>) (ArrayList<?>) objects;
+                    busSort.sort(buses);
+                    sortedObjects = new ArrayList<>(buses);
+                    break;
+                case "Student":
+                    SelectionSort<Student> studentSort = new SelectionSort<>();
+                    @SuppressWarnings("unchecked")
+                    ArrayList<Student> students = (ArrayList<Student>) (ArrayList<?>) objects;
+                    studentSort.sort(students);
+                    sortedObjects = new ArrayList<>(students);
+                    break;
+                case "User":
+                    SelectionSort<User> userSort = new SelectionSort<>();
+                    @SuppressWarnings("unchecked")
+                    ArrayList<User> users = (ArrayList<User>) (ArrayList<?>) objects;
+                    userSort.sort(users);
+                    sortedObjects = new ArrayList<>(users);
+                    break;
+            }
+            System.out.println("Готовый список объектов (сортированный):");
+            for(Field field : fields){
+                System.out.printf("%-30s", field.getName());
+            }
+            System.out.println();
+            viewArrayObject(sortedObjects);
+            viewBinarySearch(sortedObjects);
         }
     }
 
-    private static void viewBinarySearch(ArrayList<Object> objects) {
+    private static void viewBinarySearch(ArrayList<Comparable> objects) {
         System.out.println("Для поиска индекса объекта требуются значения его полей");
-        Field[] fields = objects.get(0).getClass().getDeclaredFields();
+        Field[] fields = objects.getFirst().getClass().getDeclaredFields();
         Scanner scanner = new Scanner(System.in);
-        System.out.println("Введите значение поля " + fields[0]);
-        Object firstfield = scanner.nextLine();
-        System.out.println("Введите значение поля " + fields[1]);
-        Object secondfield = scanner.nextLine();
-        System.out.println("Введите значение поля " + fields[2]);
-        Object thirdfield = scanner.nextLine();
-        // Затычка для создания объекта-примера
-        int indexOfRequiredObject = 1;
-        // Затычка для бинарного поиска (бинарный поиск в другой ветке, Заапдейчу после слияния)
-
-        if(indexOfRequiredObject < 0){System.out.println("Подобный объект не найден");}
-            else {System.out.println("Искомый объект находится на " +  indexOfRequiredObject + 1 + " месте в отсортированном списке");}
-
+        System.out.println("Введите значение поля " + fields[0].getName());
+        String firstfield = scanner.nextLine();
+        System.out.println("Введите значение поля " + fields[1].getName());
+        String secondfield = scanner.nextLine();
+        System.out.println("Введите значение поля " + fields[2].getName());
+        String thirdfield = scanner.nextLine();
+        Comparable reqObject = null;
+        switch (objects.getFirst().getClass().getSimpleName()){
+            case "Bus":
+                reqObject = new Bus.Builder()
+                        .setNumber(Integer.parseInt(firstfield))
+                        .setModel(secondfield)
+                        .setMileage(Integer.parseInt(thirdfield))
+                        .build();
+                break;
+            case "Student":
+                reqObject = new Student.Builder()
+                        .setGroupNumber(Integer.parseInt(firstfield))
+                        .setAverageScore(Double.parseDouble(secondfield))
+                        .setGradeBookNumber(Integer.parseInt(thirdfield))
+                        .build();
+                break;
+            case "User":
+                reqObject = new User.Builder()
+                        .setName(firstfield)
+                        .setPassword(secondfield)
+                        .setEmail(thirdfield)
+                        .build();
+                break;
+        }
+        int indexOfRequiredObject = BinarySearch.indexByObject(objects, reqObject) + 1;
+        if(indexOfRequiredObject == 0){System.out.println("Подобный объект не найден");}
+            else {System.out.println("Искомый объект находится на " +  indexOfRequiredObject + " месте в отсортированном списке");}
     }
 
-    private static void viewArrayObject(ArrayList<Object> objects) throws Exception {
+    private static void viewArrayObject(ArrayList<Comparable> objects) throws Exception {
         switch (objects.get(0).getClass().getSimpleName()){
             case "Bus": viewArrayBus(objects); break;
             case "Student": viewArrayStudent(objects); break;
@@ -111,15 +174,36 @@ public class Main {
         }
     }
 
-    private static void viewArrayBus(ArrayList<Object> objects) {
-        System.out.println("*вывод массива автобусов*");
+    private static void viewArrayBus(ArrayList<Comparable> objects) {
+        @SuppressWarnings("unchecked")
+        ArrayList<Bus> buses = (ArrayList<Bus>) (ArrayList<?>) objects;
+        for(Bus bus : buses){
+            System.out.printf("%-30s", bus.getNumber());
+            System.out.printf("%-30s", bus.getModel());
+            System.out.printf("%-30s", bus.getMileage());
+            System.out.println();
+        }
     }
 
-    private static void viewArrayStudent(ArrayList<Object> objects) {
-        System.out.println("*вывод массива студентов*");
+    private static void viewArrayStudent(ArrayList<Comparable> objects) {
+        @SuppressWarnings("unchecked")
+        ArrayList<Student> students = (ArrayList<Student>) (ArrayList<?>) objects;
+        for(Student student : students){
+            System.out.printf("%-30s", student.getGroupNumber());
+            System.out.printf("%-30s", student.getAverageScore());
+            System.out.printf("%-30s", student.getGradeBookNumber());
+            System.out.println();
+        }
     }
 
-    private static void viewArrayUser(ArrayList<Object> objects) {
-        System.out.println("*вывод массива пользователей*");
+    private static void viewArrayUser(ArrayList<Comparable> objects) {
+        @SuppressWarnings("unchecked")
+        ArrayList<User> users = (ArrayList<User>) (ArrayList<?>) objects;
+        for(User user : users){
+            System.out.printf("%-30s", user.getName());
+            System.out.printf("%-30s", user.getPassword());
+            System.out.printf("%-30s", user.getEmail());
+            System.out.println();
+        }
     }
 }
